--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -25,4 +25,8 @@
       <ProjectReference Include="..\Problems\Problems.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Concurrency\" />
+    </ItemGroup>
+
 </Project>
